--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "devDependencies": {
     "awesome-typescript-loader": "^3.2.3",
+    "css-loader": "^0.28.5",
     "source-map-loader": "^0.2.1",
+    "style-loader": "^0.18.2",
     "typescript": "^2.4.2"
   }
 }
