--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/body-parser": "^1.16.5",
     "@types/express": "^4.0.37",
     "@types/react": "^16.0.5",
     "@types/react-dom": "^15.5.4",
+    "body-parser": "^1.17.2",
     "express": "^4.15.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
