hygiene refactor and build hotkeys

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -18,6 +18,12 @@
       "command": "tsc server/server.ts --outDir ./dist/",
       "type": "shell",
       "problemMatcher": []
+    },
+    {
+      "taskName": "start server",
+      "command": "node dist/server/server.js",
+      "type": "shell",
+      "problemMatcher": []
     }
   ]
 }
